--- a/RoLangTree/css/screen.css
+++ b/RoLangTree/css/screen.css
@@ -8,6 +8,8 @@ body
 {
 	font-family:HammersmithOne;
 	text-align: center;
+	padding: 0;
+	margin: 0;
 }
 a{
 	text-decoration: none;
@@ -19,9 +21,12 @@ a:visited{
 
 .leftAlign{
 	float:left;
+	text-align: left;
 }
 .rightAlign{
 	float:right;
+	text-align: right;
+	padding-right: 15px;
 }
 .centerAlign{
 	float:none;
@@ -42,7 +47,15 @@ a:visited{
 }
 #points
 {
-	margin-right:15px;
+	
+}
+#helpBtn
+{
+	display: none;
+}
+#dprelBtn
+{
+	display: none;
 }
 #sentenceText
 {
@@ -75,4 +88,77 @@ a:visited{
 	text-shadow: 0px 0px 20px rgba(255, 255, 255, 1);
 	font-size: 25px;
 	margin-top: 40px;	
+}
+.modalDialog
+{
+	display:none;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 1;
+	background-color: rgba(0,0,0,0.3);
+}
+#firstHelpTip,#secondHelpTip
+{
+	display:none;
+	background-color: #333333;
+	border-radius: 10px;
+	position: absolute;
+	width: 334px;
+	height: 208px;
+	box-shadow:  0px 0px 20px rgba(0, 0, 0, .8);
+	left: 50%;
+	top: 50%;
+	margin-left: -167px;
+	margin-top: -104px;
+	color: #FFFFFF;
+	padding: 15px;
+	cursor: pointer;
+}
+#secondHelpTip
+{
+	height: 228px;
+	margin-top:-114px;
+}
+
+.myButton {
+	-moz-box-shadow:inset 0px -3px 7px 0px #29bbff;
+	-webkit-box-shadow:inset 0px -3px 7px 0px #29bbff;
+	box-shadow:inset 0px -3px 7px 0px #29bbff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #2dabf9), color-stop(1, #0688fa));
+	background:-moz-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:-webkit-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:-o-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:-ms-linear-gradient(top, #2dabf9 5%, #0688fa 100%);
+	background:linear-gradient(to bottom, #2dabf9 5%, #0688fa 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#2dabf9', endColorstr='#0688fa',GradientType=0);
+	background-color:#2dabf9;
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	border:1px solid #0b0e07;
+	/*display:inline-block*/;
+	display:none;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:arial;
+	font-size:15px;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #263666;
+	z-index: 2;
+}
+.myButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
+	background:-moz-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:-webkit-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:-o-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:-ms-linear-gradient(top, #0688fa 5%, #2dabf9 100%);
+	background:linear-gradient(to bottom, #0688fa 5%, #2dabf9 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0688fa', endColorstr='#2dabf9',GradientType=0);
+	background-color:#0688fa;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
