--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -147,7 +147,6 @@ a:visited{
 	padding:9px 23px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #263666;
-	z-index: 2;
 }
 .myButton:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0688fa), color-stop(1, #2dabf9));
@@ -162,4 +161,10 @@ a:visited{
 .myButton:active {
 	position:relative;
 	top:1px;
+}
+#nextLevelBtn{
+	z-index: 2;
+}
+#back2SetupLevelBtn{
+	z-index: 3;
 }
