--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -99,7 +99,7 @@ a:visited{
 	z-index: 1;
 	background-color: rgba(0,0,0,0.3);
 }
-#firstHelpTip,#secondHelpTip,#deleteDialog
+#firstHelpTip,#secondHelpTip,#deleteDialog,#samelevelDialog
 {
 	display:none;
 	background-color: #333333;
