--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -10,7 +10,7 @@ body
 	text-align: center;
 	padding: 0;
 	margin: 0;
-	background-image: url(../assets/images/bg.jpeg);
+	background-image: url(../assets/images/bg.png);
 }
 a{
 	text-decoration: none;
