--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -99,7 +99,7 @@ a:visited{
 	z-index: 1;
 	background-color: rgba(0,0,0,0.3);
 }
-#firstHelpTip,#secondHelpTip,#deleteDialog,#samelevelDialog
+#firstHelpTip,#secondHelpTip,#deleteDialog,#samelevelDialog,#partiProp
 {
 	display:none;
 	background-color: #333333;
@@ -181,4 +181,29 @@ a:visited{
 	top:150px;
 	right:20px;
 	display: none;
+}
+#radios{
+	position: absolute;
+}
+#radios label{
+	position: absolute;
+	padding: 1px;
+	padding-left: 3px;
+	padding-right: 3px;
+	}
+#radios input{
+	display:none;
+}
+#partiProp
+{
+	width:500px;
+	height: 500px;
+	margin-left: -250px;
+	margin-top: -250px;	
+}
+#partiProp h2
+{
+	margin-top: 200px;
+	margin-left: 50px;
+	margin-right: 50px;
 }
