--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -197,13 +197,18 @@ a:visited{
 #partiProp
 {
 	width:500px;
-	height: 500px;
+	height: 370px;
 	margin-left: -250px;
-	margin-top: -250px;	
+	margin-top: -185px;	
+	cursor: default;
+}
+#cancelPartiProp
+{
+	margin-top: 125px;
 }
 #partiProp h2
 {
-	margin-top: 200px;
+	margin-top: 130px;
 	margin-left: 50px;
 	margin-right: 50px;
 }
