--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -37,8 +37,9 @@ a:visited{
 {
 	position:absolute;
 	width:1050px; 
-	left: 50%;
-	margin-left: -525px;
+/* 	left: 50%; */
+/* 	margin-left: -525px; */
+	left:0px;
 	background-color: #333333;
 	color: #FFFFFF;
 }
@@ -96,7 +97,7 @@ a:visited{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	z-index: 1;
+	z-index: 3;
 	background-color: rgba(0,0,0,0.3);
 }
 #firstHelpTip,#secondHelpTip,#deleteDialog,#samelevelDialog,#partiProp
@@ -187,10 +188,33 @@ a:visited{
 }
 #radios label{
 	position: absolute;
-	padding: 1px;
+	padding: 2px;
 	padding-left: 3px;
 	padding-right: 3px;
+	z-index:4;
+	transition:All .1s ease;
+	-webkit-transition:All .1s ease;
+	-moz-transition:All .1s ease;
+	-o-transition:All .1s ease;
+	transform: rotate(0deg) scale(1) skew(0deg) translate(0px);
+	-webkit-transform: rotate(0deg) scale(1) skew(0deg) translate(0px);
+	-moz-transform: rotate(0deg) scale(1) skew(0deg) translate(0px);
+	-o-transform: rotate(0deg) scale(1) skew(0deg) translate(0px);
+	-ms-transform: rotate(0deg) scale(1) skew(0deg) translate(0px);
+	
+	
+	
 	}
+#radios label:hover{
+	z-index:5;
+	transform: rotate(0deg) scale(2) skew(0deg) translate(0px);
+	-webkit-transform: rotate(0deg) scale(2) skew(0deg) translate(0px);
+	-moz-transform: rotate(0deg) scale(2) skew(0deg) translate(0px);
+	-o-transform: rotate(0deg) scale(2) skew(0deg) translate(0px);
+	-ms-transform: rotate(0deg) scale(2) skew(0deg) translate(0px);
+	
+	
+}
 #radios input{
 	display:none;
 }
