conexiuni cu sageata

--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -183,6 +183,13 @@ a:visited{
 	right:20px;
 	display: none;
 }
+#deleteAllConnectionsBtn{
+	z-index: 2;
+	position: absolute;
+	top:150px;
+	left: 220px;
+	display:none; 
+}
 #radios{
 	position: absolute;
 }
