--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -95,9 +95,14 @@ a:visited{
 .modalDialog
 {
 	display:none;
+	position: fixed;
+	left:0px;
+	top:0px;
+	bottom:0px;
+	right:0px;
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	
 	z-index: 3;
 	background-color: rgba(0,0,0,0.3);
 }
@@ -162,6 +167,12 @@ a:visited{
 .myButton:active {
 	position:relative;
 	top:1px;
+}
+#buttonsContainer
+{
+	position: absolute;
+	top: 0px;
+	width: 1050px;
 }
 #nextLevelBtn{
 	z-index: 2;
