--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -57,14 +57,16 @@ a:visited{
 }
 #sentenceText
 {
-	
+	margin:0;
+}
+#gameContainer
+{
+	display:none;
+	position:absolute;
 }
 #gameCanvas
 {
-	
-	display:none;
 	border: 1px solid #cccccc;
-
 }
 #startGame
 {
@@ -176,28 +178,28 @@ a:visited{
 #nextLevelBtn{
 	z-index: 2;
 	position:absolute;
-	top:150px;
+	top:30px;
 	right:20px;
 	display: none;
 }
 #back2SetupLevelBtn{
 	z-index: 2;
 	position:absolute;
-	top:150px;
+	top:30px;
 	left:20px;
 	display: none;
 }
 #next2ConnectionsBtn{
 	z-index: 2;
 	position:absolute;
-	top:150px;
+	top:30px;
 	right:20px;
 	display: none;
 }
 #deleteAllConnectionsBtn{
 	z-index: 2;
 	position: absolute;
-	top:150px;
+	top:30px;
 	left: 220px;
 	display:none; 
 }
@@ -224,4 +226,12 @@ a:visited{
 }
 #partiProp h2
 {
+}
+#statusText{
+	font-size:12px;
+	color:white;
+	position: absolute;
+	z-index: 2;
+	left: 10px;
+	top:80px;
 }
