--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -241,3 +241,12 @@ a:visited{
 	left: 10px;
 	top:80px;
 }
+#clasamentContainer{
+	display: none;
+	text-align: left;
+}
+#clasamentContainer table
+{
+	width: 100%;
+	padding-top: 30px;
+}
