--- a/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
+++ b/jocarbore/jocarbore-war/src/main/webapp/css/screen.css
@@ -69,10 +69,40 @@ a:visited{
 {
 	display:none;
 	position:absolute;
+	top: 100px; /* atentie la inaltimea canvasului: va fi inaltimea ferestrei minus acest top minus #statusText */  
+	left: 0;
+	bottom:0;
+	right: 0;
+	margin: 0;
+}
+#boardLine
+{
+	position: absolute;
+	color:#cccccc;
+	border-color: #cccccc;
+	left: 0;
+	right: 0;
+	top: 100px;
+	z-index: -5;
+}
+#gameStats
+{
+	position:absolute;
+	width:100%;
+	left:0;
+	top:0;
 }
 #gameCanvas
 {
-	border: 1px solid #cccccc;
+	/*border: 1px solid #cccccc;*/
+	border-top:1px solid #cccccc;
+	/*border: 0;*/
+	top:15px;
+	position:absolute;
+	left:0;
+	bottom:0;
+	right:0;
+	z-index: 1;
 }
 #startGame
 {
@@ -114,7 +144,7 @@ a:visited{
 	z-index: 3;
 	background-color: rgba(0,0,0,0.3);
 }
-#firstHelpTip,#secondHelpTip,#deleteDialog,#samelevelDialog,#partiProp,#validationDialog
+#firstHelpTip,#secondHelpTip,#deleteDialog,#samelevelDialog,#partiProp,#validationDialog,#deleteAllDialog
 {
 	display:none;
 	background-color: #333333;
@@ -178,8 +208,8 @@ a:visited{
 #buttonsContainer
 {
 	position: absolute;
-	top: 0px;
-	width: 1050px;
+	top: 15px;
+	width: 100%;
 }
 #nextLevelBtn{
 	z-index: 2;
@@ -243,16 +273,35 @@ a:visited{
 	font-size:12px;
 	color:white;
 	position: absolute;
-	z-index: 2;
+	/*z-index: 2;*/
 	left: 10px;
-	top:80px;
+	top:0;
 }
 #clasamentContainer{
 	display: none;
 	text-align: left;
+	position: absolute;
+	left:0;
+	margin:0;
+	top: 150px;
 }
 #clasamentContainer table
 {
 	width: 100%;
 	padding-top: 30px;
+}
+#myProfieContainer
+{
+	display: none;
+	text-align: left;
+	position: absolute;
+	top: 150px;
+	left: 0;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
+#myProfileForm
+{
+	width: 100%;
 }
